Add paxd agent connection restart API
